--- a/00-welcome-slides/welcome.lyx
+++ b/00-welcome-slides/welcome.lyx
@@ -205,16 +205,16 @@ dai...interpola le annotazioni e dimmi cosa ti aspetti di dover fare qui.
 \end_layout
 
 \begin_layout Date
-Esercitazione 1
+Esercitazione
 \begin_inset Newline newline
 \end_inset
 
-xx Ottobre 2015
+22 Ottobre 2015
 \begin_inset Argument 1
 status open
 
 \begin_layout Plain Layout
-xx Ottobre 2015
+22 Ottobre 2015
 \end_layout
 
 \end_inset
